@@ -77,7 +77,7 @@ GType soup_message_get_type (void);
 SoupMessage   *soup_message_new                 (const char        *method,
 						 const char        *uri_string);
 SoupMessage   *soup_message_new_from_uri        (const char        *method,
-						 const SoupURI     *uri);
+						 SoupURI           *uri);
 
 void           soup_message_set_request         (SoupMessage       *msg,
 						 const char        *content_type,
@@ -111,9 +111,9 @@ SoupHTTPVersion  soup_message_get_http_version    (SoupMessage       *msg);
 
 gboolean         soup_message_is_keepalive        (SoupMessage       *msg);
 
-const SoupURI   *soup_message_get_uri             (SoupMessage       *msg);
+SoupURI         *soup_message_get_uri             (SoupMessage       *msg);
 void             soup_message_set_uri             (SoupMessage       *msg,
-						   const SoupURI     *uri);
+						   SoupURI           *uri);
 
 /**
  * SoupMessageFlags:
